force-app/main/default/objects/custom_create191__c/custom_create191__c.object-meta.xml
<CustomObject>
    <label>Custom created object191</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects191</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>