force-app/main/default/objects/custom_create191__c/fields/custom_create_191field505__c.field-meta.xml
<CustomField>
    <fullName>custom_create_191field505__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 191field505</label>
    <type>Checkbox</type>
</CustomField>