force-app/main/default/objects/custom_create191__c/fields/custom_create_191field547__c.field-meta.xml
<CustomField>
    <fullName>custom_create_191field547__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 191field547</label>
    <type>Checkbox</type>
</CustomField>